--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "string_view": "c",
         "initializer_list": "c",
         "utility": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "spinlock.h": "c"
     }
 }
