--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "initializer_list": "c",
         "utility": "c",
         "types.h": "c",
-        "spinlock.h": "c"
+        "spinlock.h": "c",
+        "game.h": "c"
     }
 }
